- import automatique des fonts google par google api - ajout des font google dans les settings + refacto des tokens en conséquence

--- a/src/scss/_lists.scss
+++ b/src/scss/_lists.scss
@@ -1,6 +1,5 @@
-@use "settings/settings" as *;
-@use "function/utils" as *;
 @use "module/tokens" as *;
+@use "module/utils" as *;
 
 // To be used for general lists
 ul {
