--- a/src/scss/module/_grid.scss
+++ b/src/scss/module/_grid.scss
@@ -1,4 +1,5 @@
 @use "tokens" as *;
+@use "map" as *;
 @use "sass:map";
 // Merci ! / ty Bootstrap
 @import "../../../node_modules/bootstrap/scss/functions";
