--- a/src/scss/module/_tokens.scss
+++ b/src/scss/module/_tokens.scss
@@ -1,5 +1,6 @@
 @use "../settings/settings" as *;
 @use "../function/utils" as *;
+@use "map" as *;
 @use "sass:map";
 @use "sass:list";
 @use "sass:string";
@@ -23,9 +24,9 @@
 $xl-settings: (
     font : (
         family : (
-            roboto: string.unquote("Roboto, sans-serif"),
-            open-sans: string.unquote("Open Sans, sans-serif"),
-            roboto-mono: string.unquote("Roboto Mono,sans-serif"),
+            roboto: google-font(roboto),
+            open-sans: google-font(open-sans),
+            roboto-mono: google-font(roboto-mono),
             content: font family open-sans, // le token généré sera --qc-font-family-content : Open Sans, sans-serif;
             header: font family roboto,
             code: font family roboto-mono,
@@ -186,34 +187,6 @@ $breakpoints-settings: (
 ) !default;
 
 
-// mixins
-
-
-@mixin map-deep-parse($map, $parents: '--qc', $origin : null) {
-  @if $origin == null {
-    $origin: $map;
-  }
-  @each $key, $value in $map {
-    $path: #{$parents}-#{$key};
-    @if (type-of($value) == 'map') {
-      @include map-deep-parse($value, $path, $origin) using($path,$value) {
-        @content($path, $value);
-      }
-    ;
-    } @else {
-      @if (type-of($value) == 'list') {
-        $alias: $value;
-        $value: map-deep-get($origin, $alias...);
-        @if $value == null {
-          @error "Undefined token alias #{$path} : #{$alias}";
-          $value: 'undefined';
-        }
-      }
-      @content($path, $value);
-    }
-  }
-}
-
 // functions
 
 // Return css var corresponding to this token
@@ -236,18 +209,6 @@ $breakpoints-settings: (
   @return $token;
 }
 
-// fonctionne comme map-get, mais si la valeur est une liste, elle est considérée comme un raccourci
-// vers une autre entrée de la map
-// ex
-// map : ( foo: (bar : baz), biz : foo bar);
-// $value : token-get(map, biz); /* raccourci vers foo bar, $value == baz */
-@function map-deep-get($map: map-get($breakpoints-settings, xl), $path...) {
-  $value: map-get($map, $path...);
-  @if type-of($value) == 'list' {
-    @return map-deep-get($map, $value...)
-  }
-  @return $value;
-}
 
 
 
