--- a/src/scss/_shadings.scss
+++ b/src/scss/_shadings.scss
@@ -1,6 +1,6 @@
-@use "settings/settings" as *;
-@use "function/utils" as *;
 @use "module/tokens" as *;
+@use "module/utils" as *;
+@use "module/map" as *;
 @use "sass:map";
 
 $color: map-deep-get($xl-settings, box-shadow, rgba-color);
