- ajout de rollup.config.js + configuration - modification des directives d'import/use suite à la définition de chemins d'inclusion - modification de module/map pour le rendre générique (wip) - renommage de _base.scss, nom manifestement incompatible avec rollup-plugin-sass -

--- a/src/scss/module/_map.scss
+++ b/src/scss/module/_map.scss
@@ -13,7 +13,7 @@
         $alias: $value;
         $value: map-deep-get($origin, $alias...);
         @if $value == null {
-          @error "Undefined token alias #{$path} : #{$alias}";
+          @error "Undefined alias for path #{$path} : #{$alias}";
           $value: 'undefined';
         }
       }
