--- a/src/scss/module/_tokens.scss
+++ b/src/scss/module/_tokens.scss
@@ -1,5 +1,5 @@
-@use "../settings/settings" as *;
-@use "../function/utils" as *;
+@use "settings/settings" as *;
+@use "function/utils" as *;
 @use "map" as *;
 @use "sass:map";
 @use "sass:list";
