--- a/src/scss/module/_utils.scss
+++ b/src/scss/module/_utils.scss
@@ -1,6 +1,6 @@
 @use "tokens" as *;
-@forward "../settings/settings";
-@forward "../function/utils";
+@forward "settings/settings";
+@forward "function/utils";
 
 // typography
 
