--- a/src/scss/settings/_settings.scss
+++ b/src/scss/settings/_settings.scss
@@ -5,5 +5,5 @@ $google-api-font: true !default;
 $google-fonts : (
   roboto: (Roboto, sans-serif),
   open-sans: ('Open Sans', sans-serif),
-  roboto-mono: ('Roboto Mono', sans-serif)
+  roboto-mono: ('Roboto Mono', monospace)
 );
