--- a/src/scss/module/_grid.scss
+++ b/src/scss/module/_grid.scss
@@ -2,12 +2,12 @@
 @use "map" as *;
 @use "sass:map";
 // Merci ! / ty Bootstrap
-@import "../../../node_modules/bootstrap/scss/functions";
-@import "../../../node_modules/bootstrap/scss/variables";
+@import "bootstrap/scss/functions";
+@import "bootstrap/scss/variables";
 $enable-deprecation-messages : false;
-@import "../../../node_modules/bootstrap/scss/mixins/breakpoints";
-@import "../../../node_modules/bootstrap/scss/mixins/grid";
-@import "../../../node_modules/bootstrap/scss/mixins/deprecate";
+@import "bootstrap/scss/mixins/breakpoints";
+@import "bootstrap/scss/mixins/grid";
+@import "bootstrap/scss/mixins/deprecate";
 
 $grid-breakpoints: map-deep-get($xl-settings, grid, breakpoint);
 $grid-gutter-width: map-deep-get($xl-settings, grid, gutter);
