--- a/src/scss/qc-design-tokens.scss
+++ b/src/scss/qc-design-tokens.scss
@@ -1,8 +1,12 @@
+@use "settings/settings" as *;
 @use "module/tokens" as *;
 @use "module/map" as *;
 @use "module/grid" as *;
 
 :root {
+
+   font-size: #{$percent-root-font-size}#{"%"};
+
    @each $breakpoint, $settings in $breakpoints-settings {
       @include media-breakpoint-down($breakpoint) {
          @include map-deep-parse($settings) using ($path,$value)
