- séparation des includes bootstrap dans un fichie à part (pour éviter d'exposer fonctions et variables bs inutiles dans module/grid.scss) - correction dans colors.scss

--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,11 +1,12 @@
+@use "module/utils" as *;
 @use "module/tokens" as *;
 @use "module/map" as *;
 @use "sass:map";
 
 $colors : (color : map.get($xl-tokens, color));
-@include map-deep-parse($colors, '.qc-bg') using ($path,$value)
+@include map-deep-parse($colors) using ($path,$value)
 {
-  #{$path} {
+  .qc-bg-#{deep-implode($path, '-')} {
     background-color: $value;
   }
 };
