Ajustement des listes - remplacement des paddings par des margins - qui fusionnent - utilisation de token - retrait de la couleur des li (inutile, hérite de celle du texte)

--- a/src/scss/_lists.scss
+++ b/src/scss/_lists.scss
@@ -1,15 +1,13 @@
 @use "module/tokens" as *;
 @use "module/utils" as *;
 
-// To be used for general lists
 ul {
     list-style: disc;
-    padding-bottom: rem($base-spacer);
+    margin-top: 0;
+    margin-bottom: token-value(spacer md);
     padding-left: rem(4 * $base-spacer);
     li {
-        padding-bottom: rem(2 * $base-spacer);
-        margin: 0;
-        color: token-value(color, blue, dark);
+        margin-bottom: token-value(spacer,sm);
     }
     ul {
         margin-top: token-value(spacer,sm);
