--- a/src/scss/settings/_tokens.scss
+++ b/src/scss/settings/_tokens.scss
@@ -141,15 +141,15 @@ $xl-tokens: (
             sm: 576px,
             md: 768px,
             lg: 992px,
-            xl: 1140px,
+            xl: 1200px,
         ),
         container-max-width: (
-            sm: 576px,
-            md: 768px,
-            lg: 992px,
+            sm: 540px,
+            md: 720px,
+            lg: 960px,
             xl: 1140px,
         )
-    )
+    ),
 ) !default;
 
 $breakpoints-tokens: (
