Modification de la génération de la grille - modification de rollup.config.js pour prendre les fichiers depuis bs et remplacer les classes de grid pour y ajouter le préfixe qc- - modification des fichiers scss en conséquence.

--- a/src/scss/settings/_settings.scss
+++ b/src/scss/settings/_settings.scss
@@ -9,3 +9,5 @@ $google-fonts : (
   open-sans: ('Open Sans', sans-serif),
   roboto-mono: ('Roboto Mono', monospace)
 );
+
+$enable-grid-classes: true;
