--- a/src/scss/settings/_settings.scss
+++ b/src/scss/settings/_settings.scss
@@ -1,5 +1,5 @@
 $percent-root-font-size: 62.5 !default;
-$font-dir: "../fonts" !default;
+$img-dir: "../img";
 $base-spacer: 8 !default;
 // les polices sont importées par google api.
 // pour un hébergement local, cf https://google-webfonts-helper.herokuapp.com/fonts
