--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -91,7 +91,8 @@ a {
   }
   .external-link-tail {
     white-space: nowrap;
-    img {
+    img.external-link-img {
+      content:url(#{$img-dir}}/external-link.svg);
       max-height: rem(11);
       max-width: rem(11);
       margin-bottom: rem(1.6);
